--- a/html/physicalModel.html
+++ b/html/physicalModel.html
@@ -50,7 +50,7 @@
                 chegamos a criação do banco de dados, usando um
                 sistema gerenciador de banco de dados.
                 <br>
-                É nessa fase que propordionamos o detalhamento
+                É nessa fase que proporcionamos o detalhamento
                 de todo o banco de dados, detalhamento das tabelas,
                 dos campos, dos tipos de valores, indices de acesso,
                 apenas após esta etapa estamos aptos para a criação
