--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -55,7 +55,7 @@
         <img src="../assets/cabesa.jpg" alt="Foto do Nome do Membro 2" class="member-picture" >
         <div>
             <h3>Lucas Pio</h3>
-            <p>Encarregado de estruturar as páginas de 'Index' e 'Quem somos', tentando sempre visar os 100% de responsividade</p>
+            <p>Encarregado de estruturar as páginas de "Home", "Quem somos" e "Notações de modelagem de dados", tentando sempre visar os 100% de responsividade</p>
         </div>
     </div>
 
