--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -136,13 +136,44 @@
                     tabelas de um Banco de Dados Relacional.
                     <br>
                     Chave Candidata (ou Alternativa): Uma coluna (ou uma
-                    xombinação de colunas) que é candidata a ser uma
+                    combinação de colunas) que é candidata a ser uma
                     chave primária.
                     Possui as mesmas características de uma chave primária,
                     porém não foi escolhida pelo projetista de Banco de 
                     Dados Relacional.
             </p>
                     
+            </p>
+            <p class="subtitle-text-logicModel">Mapeamento</p>
+            <p class="text-logicModel">
+              <ul class="text-logicModel">
+                <li class="li-mainStepsToDataModeling">
+                    1:N --> O lado N recebe a FK
+                <br>
+                <img src="../assets/ex1.png" class="text-img2">
+                <br>
+                <br>
+                <img src="../assets/ex2.png" class="text-img2">
+                <br>
+                </li>
+                <li class="li-mainStepsToDataModeling">
+                    N:N --> Nova tabela
+                    <br>
+                <img src="../assets/ex3.png" class="text-img2">
+                <br>
+                <br>
+                <img src="../assets/ex4.png" class="text-img2">
+                <br>
+                </li>
+                <li class="li-mainStepsToDataModeling">
+                    1:1 --> Unificação de tabelas
+                    <br>
+                <img src="../assets/ex5.png" class="text-img2">
+                <br>
+                <br>
+                <img src="../assets/ex6.png" class="text-img2">
+                <br>
+              </ul>
             </p>
         </div>
         <div class="text-logicModel">
