Adding an image to the text

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar">
       <span class="navBarLeft">
-        <h3 class="navBarTitle">Placeholder</h3>
+        <h3 class="navBarTitle">Learning door</h3>
         <a  href="../index.html"><img
           src="../assets/Logo.jpg"
           alt="brand-logo.png"
@@ -72,15 +72,15 @@
         <img src="../assets/phlopes.jpg" alt="Foto do Nome do Membro 4" class="member-picture">
         <div>
             <h3>Pedro H. Lopes</h3>
-            <p>Pedro H. Lopes desempenhou um papel crucial em [área de responsabilidade], assegurando que tudo funcionasse perfeitamente.</p>
+            <p>Pedro H. Lopes desempenhou um papel crucial em abstrair o conteúdo, assegurando que tudo funcionasse perfeitamente.</p>
         </div>
     </div>
 
     <div class="team-member">
-        <img src="../assets/marmelo.jpg" alt="Foto do Nome do Membro 4" class="member-picture">
+        <img src="../assets/Shinnishi.jpg" alt="Foto do Nome do Membro 4" class="member-picture">
         <div>
             <h3>Yuri Shinnishi</h3>
-            <p>Yuri desempenhou um papel crucial em [área de responsabilidade], assegurando que tudo funcionasse perfeitamente.</p>
+            <p>Yuri desempenhou um papel crucial em Como Modelar Dados, assegurando que tudo funcionasse perfeitamente.</p>
         </div>
     </div>
       </section>
