adapt index title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style/index.css" />
   <link rel="icon" type="image/png" href="./assets/Logo.jpg">
-  <title>Learning door</title>
+  <title>Módulos do curso:</title>
 </head>
 
 <body>
